remove not conditional on unique index

--- a/templates/main.rb.erb
+++ b/templates/main.rb.erb
@@ -67,7 +67,7 @@ ActiveRecord::Schema.define(version: <%= @version %>) do
 <% end -%>
     t.index ["id"], name: "index_id_on_<%= table[:name] %>", unique: true, using: :btree
 <% for column in table[:columns] -%><% if column[:indexed] -%>
-    t.index ["<%= column[:name] %>"], name: "index_<%= column[:name] %>_on_<%= table[:name] %>"<% if !column[:unique] %>, unique: true<% end %>, using: :btree
+    t.index ["<%= column[:name] %>"], name: "index_<%= column[:name] %>_on_<%= table[:name] %>"<% if column[:unique] %>, unique: true<% end %>, using: :btree
 <% end -%>
 <% end -%>
   end
